Fixed Title Overlap

--- a/static/built/screen.css
+++ b/static/built/screen.css
@@ -119,7 +119,6 @@ img {
 }
 html {
   box-sizing: border-box;
-  font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
@@ -529,8 +528,6 @@ body {
 }
 .site-title {
   z-index: 10;
-  margin: 0;
-  padding: 0;
   font-size: 3.8rem;
   font-weight: 700;
   font-family: GreatDay;
@@ -905,7 +902,8 @@ body {
   color: #3eb0ef;
 }
 .post-full-title {
-  margin: 0;
+  margin-top: 50px;
+  margin-bottom: 0;
   color: #090a0b;
   font-family: GreatDay;
 }
